# parcial-tercer-corte-HPC

./: README.md
ModeloCPP/lr/: CMakeLists.txt  linearregression.cpp  linearregression.h  main.cpp
ModeloCPP/lr/DataSets/: winedata.csv
ModeloCPP/lr/DataSets/06-diamonds/: README.txt  diamondsHPC.csv
ModeloCPP/lr/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  costo.txt  lr.cbp  theta.txt  y_train_hatCPP.txt
ModeloCPP/lr/Extraccion/: extraer.cpp  extraer.h
ModeloPython/: LInearRegressionParcial (1).ipynb
